--- a/data1/Tools/UltraISO/uikey.ini
+++ b/data1/Tools/UltraISO/uikey.ini
@@ -1,5 +1,5 @@
 [UltraISO]
 UserName='User 2k10'  
 Registration='4C54-85DA-8D8D-4912' 
-Language='Russian'
+Language='Russian'Language='Russian'
 כנלנמכüע ûגגאûגאגûאûאפגאפÀפאûÔÛÀפûאפûג
